--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,7 @@
 @import "libs 2/skel";
 @import url('../css/font-awesome.min.css');
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
+@import "~bootstrap/scss/bootstrap";
 
 @import "css-grid";
 /*
