--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -40,6 +40,7 @@
 
 .pillars-pic {
 	min-height: 220px;
+	max-height: 220px;
 	object-fit: cover;
 }
 
@@ -525,6 +526,7 @@ nav {
 		@include icon;
 		border-bottom: none;
 		position: relative;
+		color: white;
 
 		> .label {
 			display: none;
