Changed scss global imports

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,7 +4,7 @@
 @import "libs 2/skel";
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 @import url('../css/font-awesome.min.css');
-
+@import '~bootstrap/dist/css/bootstrap.min.css';
 @import "css-grid";
 /*
 	Photon by HTML5 UP
