--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1536,3 +1536,44 @@ nav {
 			}
 
 	}
+
+/* Profile Page */
+	#edit {
+		margin: 2em 0;
+	
+		h4 {
+			margin: .5em 0;
+		}
+		input[type="text"] {
+			width: 20em;
+		}
+		input[type="button"]{
+			margin: 0 0 0 5em;
+		}
+	
+		.bio {
+			margin: 0 0 0 5em;
+		}
+
+		img{
+			object-fit: cover;
+			width: 100px;
+			height: 100px;
+			border-radius: 50%;
+		}
+
+		button:focus{
+			background-color:#A52A2A;
+
+			
+		}
+		button {
+			transition-duration: 0.4s;
+		  }
+		button:hover {
+			border: .5px solid #ffcccb; 
+			
+		  }
+
+		
+	}
