--- a/frontend/src/pages/portal_pages/brothers.module.scss
+++ b/frontend/src/pages/portal_pages/brothers.module.scss
@@ -3,10 +3,12 @@
 }
 
 .card__container {
-  height: 300px;
-  width: 250px;
+  height: 280px;
+  border-radius: 5px;
   position: relative;
   cursor: pointer;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(53, 53, 53, 0.67);
+  box-shadow: 2px 2px 5px 0px rgba(53, 53, 53, 0.67);
 
   &:hover {
     .card__overlay {
@@ -30,6 +32,11 @@
   min-width: 100%;
   object-fit: cover;
   border-radius: 5px;
+
+  // helps optimize browser repaints
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  will-change: transform;
 }
 
 .card__overlay {
