Add merit management page for pledge parents

--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -915,7 +915,7 @@ button,
   border-radius: _size(border-radius);
   border: 0;
   box-shadow: inset 0 0 0 1px _palette(border);
-  color: _palette(fg-bold) !important;
+  color: _palette(fg-bold);
   cursor: pointer;
   display: inline-block;
   font-size: 0.9em;
