--- a/frontend/src/pages/portal_pages/dashboard.module.scss
+++ b/frontend/src/pages/portal_pages/dashboard.module.scss
@@ -1,7 +1,7 @@
 .root {
   height: 100vh;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: #883a3a;
   color: #ffffff;
   padding: 50px;
