--- a/frontend/src/pages/portal_pages/dashboard.module.scss
+++ b/frontend/src/pages/portal_pages/dashboard.module.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   min-height: 100vh;
   width: 100%;
-  background-color: #883a3a;
+  background-color: #6d2e2e;
   color: #ffffff;
   padding: 50px;
 }
