--- a/frontend/src/pages/portal_pages/merit-form.module.scss
+++ b/frontend/src/pages/portal_pages/merit-form.module.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  background-color: #883a3a;
+  background-color: #6d2e2e;
 }
 
 .error__message {
