--- a/frontend/src/pages/portal_pages/merit-manager.module.scss
+++ b/frontend/src/pages/portal_pages/merit-manager.module.scss
@@ -3,7 +3,7 @@
   height: fit-content;
   min-height: 100vh;
   width: 100%;
-  background-color: #883a3a;
+  background-color: #6d2e2e;
   padding: 50px;
 }
 
