Add content to about page

--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -39,12 +39,12 @@
   p {
     text-align: left;
   }
+}
 
-  &.about-block {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-    margin-bottom: 80px;
-  }
+.about-block {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  margin-bottom: 80px;
 }
 
 .pillars-pic {
