Add account overview and edit profile page frontend and backend

--- a/frontend-v2/src/styles/pages/dashboard.module.scss
+++ b/frontend-v2/src/styles/pages/dashboard.module.scss
@@ -2,10 +2,14 @@
   background-color: #d9dcdf;
   min-height: 90vh;
   height: fit-content;
-  padding: 5rem;
+  padding: 3rem 5rem;
 }
 
-.dashboard__parent {
+.heading__icon {
+  margin: 0 1rem;
+}
+
+.dashboard__container {
   border-radius: 10px;
   background-color: white;
   display: flex;
