--- a/frontend-v2/src/styles/components/navigation-bar.module.scss
+++ b/frontend-v2/src/styles/components/navigation-bar.module.scss
@@ -22,6 +22,7 @@
   font-size: 25px;
   margin-left: 1rem;
   font-weight: 500;
+  margin-bottom: 0;
 }
 
 #sjsu__text {
@@ -101,7 +102,7 @@
   background-color: white;
   width: 100%;
   top: 10vh;
-  z-index: 1;
+  z-index: 2;
 }
 
 @media (min-width: 1000px) {
