Expand dashboard view to full viewport width/height

--- a/frontend-v2/src/styles/components/navigation-bar.module.scss
+++ b/frontend-v2/src/styles/components/navigation-bar.module.scss
@@ -1,5 +1,10 @@
 .root {
   height: 10vh;
+  border-bottom: 1px solid lightgrey;
+}
+
+.nav__container {
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
