--- a/frontend-v2/src/styles/components/merit-manager.module.scss
+++ b/frontend-v2/src/styles/components/merit-manager.module.scss
@@ -1,10 +1,18 @@
 .root {
   padding: 5rem;
+  min-height: 90vh;
   width: 100%;
 }
 
 .title {
   font-size: 2rem;
   font-weight: 700;
-  margin-bottom: 2rem;
+}
+
+.error__message {
+  color: red;
+}
+
+.success__message {
+  color: green;
 }
