--- a/frontend-v2/src/styles/components/merits-table.module.scss
+++ b/frontend-v2/src/styles/components/merits-table.module.scss
@@ -11,3 +11,10 @@
   font-size: 2rem;
   font-weight: 400;
 }
+
+.statistics {
+  width: 50%;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+}
