--- a/frontend-v2/src/styles/components/merits-table.module.scss
+++ b/frontend-v2/src/styles/components/merits-table.module.scss
@@ -3,7 +3,7 @@
   min-height: 90vh;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
 }
 
