tweak(ui): Fix justify content to flex-start

--- a/frontend-v2/src/styles/components/register.module.scss
+++ b/frontend-v2/src/styles/components/register.module.scss
@@ -3,7 +3,7 @@
   min-height: 90vh;
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .form__container {
